[package]
name = "0xbtc-miner-feed"
version = "0.1.0"
authors = ["rockmtn <rockmtn@protonmail.com>"]

[dependencies]
websocket = "0.23.0"
config = "0.9.3"
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = "0.9.19"
serde = "1.0.97"
openssl-sys = { version = "0.9.48", features = ["vendored"] }
